# Maestro

./: .dockerignore  .editorconfig  .env.example  .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  GOVERNANCE.md  README.md  SECURITY.md  docker-compose.yml  rust-toolchain.toml
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
crates/api/: Cargo.toml
crates/api/src/: app.rs  background.rs  error.rs  lib.rs  main.rs  state.rs
crates/api/src/middleware/: auth.rs  mod.rs
crates/api/src/routes/: api_keys.rs  chat.rs  connections.rs  health.rs  mod.rs  models.rs  orchestrate.rs  runs.rs  usage.rs
crates/calibration/: Cargo.toml
crates/calibration/src/: engine.rs  fusion.rs  graders.rs  lib.rs  priors.rs  probe.rs  suite.rs
crates/classifier/: Cargo.toml
crates/classifier/src/: lib.rs
crates/core-types/: Cargo.toml
crates/core-types/src/: capability.rs  lib.rs  policy.rs  task.rs  trace.rs
crates/executor/: Cargo.toml
crates/executor/src/: lib.rs
crates/gateway/: Cargo.toml
crates/gateway/src/: client.rs  error.rs  genai_adapter.rs  lib.rs  types.rs
crates/gateway/src/fallback/: mod.rs
crates/gateway/src/providers/: mod.rs  registry.rs
crates/gateway/src/stream/: mod.rs
crates/gateway/src/translation/: anthropic.rs  gemini.rs  mod.rs  openai.rs
crates/planner/: Cargo.toml
crates/planner/src/: lib.rs  templates.rs
crates/policy/: Cargo.toml
crates/policy/src/: lib.rs
crates/registry/: Cargo.toml
crates/registry/src/: lib.rs
crates/router/: Cargo.toml
crates/router/src/: lib.rs
crates/storage/: Cargo.toml
crates/storage/src/: db.rs  error.rs  lib.rs  schema.rs
crates/storage/src/repos/: api_key.rs  capability_profile.rs  connection.rs  mod.rs  plan_cache.rs  run.rs  settings.rs  trace_event.rs  usage.rs
crates/synthesizer/: Cargo.toml
crates/synthesizer/src/: lib.rs
crates/tools/: Cargo.toml
crates/tools/src/: lib.rs
crates/verifier/: Cargo.toml
crates/verifier/src/: lib.rs  sandbox.rs
docs/: plan-v0.1.0.md
frontend/: .dockerignore  Dockerfile  README.md  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/orchestrate/: page.tsx
frontend/app/runs/: page.tsx
frontend/app/runs/[id]/: page.tsx
frontend/components/: TraceDAG.tsx  TraceTimeline.tsx
frontend/lib/: api.ts
