[package]
name = "api"
version.workspace = true
edition.workspace = true

[[bin]]
name = "maestro"
path = "src/main.rs"

[dependencies]
core-types = { workspace = true }
storage = { workspace = true }
gateway = { workspace = true }
registry = { workspace = true }
calibration = { workspace = true }
planner = { workspace = true }
classifier = { workspace = true }
router = { workspace = true }
executor = { workspace = true }
verifier = { workspace = true }
synthesizer = { workspace = true }
policy = { workspace = true }
axum = { workspace = true }
axum-extra = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
hyper = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }
async-openai = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
jsonwebtoken = { workspace = true }
argon2 = { workspace = true }
rand = { workspace = true }
bytes = { workspace = true }
base64 = { workspace = true }
dotenvy = { workspace = true }
config = { workspace = true }
dirs = { workspace = true }
