[package]
name = "executor"
version.workspace = true
edition.workspace = true

[dependencies]
core-types = { workspace = true }
storage = { workspace = true }
gateway = { workspace = true }
registry = { workspace = true }
classifier = { workspace = true }
router = { workspace = true }
verifier = { workspace = true }
policy = { workspace = true }
petgraph = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
dashmap = { workspace = true }
tools = { workspace = true }
