[package]
name = "gateway"
version.workspace = true
edition.workspace = true

[dependencies]
core-types = { workspace = true }
storage = { workspace = true }
reqwest = { workspace = true }
eventsource-stream = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }
bytes = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
url = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
genai = { workspace = true }
