[package]
name = "policy"
version.workspace = true
edition.workspace = true

[dependencies]
core-types = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
