[package]
name = "synthesizer"
version.workspace = true
edition.workspace = true

[dependencies]
core-types = { workspace = true }
storage = { workspace = true }
gateway = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
