[package]
name = "tools"
version.workspace = true
edition.workspace = true

[dependencies]
gateway = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
evalexpr = { workspace = true }
